RESOLVED FIXED 124038
REGRESSION(r158883): all layout-jsc tests crash for ARM_TRADITIONAL architecture
https://bugs.webkit.org/show_bug.cgi?id=124038
Summary REGRESSION(r158883): all layout-jsc tests crash for ARM_TRADITIONAL architecture
Julien Brianceau
Reported 2013-11-08 05:08:48 PST
layout-jsc tests results for r158882 + changeset 158915: 492 tests passed, 5 tests failed, 0 tests crashed. layout-jsc tests results for r158883 + changeset 158915: 0 tests passed, 497 tests failed, 497 tests crashed.
Attachments
run-layout-jsc results (856.82 KB, application/octet-stream)
2013-11-08 05:16 PST, Julien Brianceau
no flags
ARM fix after r158883 (4.47 KB, patch)
2013-11-08 05:52 PST, Julien Brianceau
no flags
run-layout-jsc results (with patch) (805.58 KB, application/octet-stream)
2013-11-08 05:55 PST, Julien Brianceau
no flags
ARM fix after r158883 (with the good register for ARM_THUMB2) (4.52 KB, patch)
2013-11-08 06:23 PST, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-11-08 05:16:23 PST
Created attachment 216375 [details] run-layout-jsc results Results of revision 158916 of run-layout-jsc run on ARM_TRADITIONAL with: - r158883 + changeset 158915 - r158883 + changeset 158915
Julien Brianceau
Comment 2 2013-11-08 05:52:32 PST
Created attachment 216381 [details] ARM fix after r158883
Julien Brianceau
Comment 3 2013-11-08 05:55:09 PST
Created attachment 216382 [details] run-layout-jsc results (with patch) With patch tested on r158916: 492 tests passed, 5 tests failed, 0 tests crashed.
Julien Brianceau
Comment 4 2013-11-08 06:09:06 PST
Comment on attachment 216381 [details] ARM fix after r158883 Oops, there's a mistake, I'll submit a new patch soon
Julien Brianceau
Comment 5 2013-11-08 06:23:23 PST
Created attachment 216386 [details] ARM fix after r158883 (with the good register for ARM_THUMB2) Same patch with the correct frame pointer register in getHostCallReturnValue for ARM_THUMB2.
WebKit Commit Bot
Comment 6 2013-11-08 10:23:54 PST
Comment on attachment 216386 [details] ARM fix after r158883 (with the good register for ARM_THUMB2) Clearing flags on attachment: 216386 Committed r158926: <http://trac.webkit.org/changeset/158926>
WebKit Commit Bot
Comment 7 2013-11-08 10:23:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.