REGRESSION(r158883): Fix crashes for ARM architecture. https://bugs.webkit.org/show_bug.cgi?id=124038

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-11-08
Reviewed by Michael Saboff.

* jit/GPRInfo.h: Remove r11 from the temporary register set, use a free register for
nonPreservedNonReturnGPR and remove obsolete declaration of bucketCounterRegister.
(JSC::GPRInfo::toRegister):
(JSC::GPRInfo::toIndex):
* jit/JITOperations.cpp: Frame pointer register is r11 for ARM_TRADITIONAL and
r7 for ARM_THUMB2 instead of r5 since r158883.

Canonical link: https://commits.webkit.org/142232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158926 268f45cc-cd09-0410-ab3c-d52691b4dbfc